--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   api:
-    container_name: api
+    container_name: flightwatch-api
     build: .
     environment:
       DATABASE_URL: $DATABASE_URL
@@ -11,7 +11,7 @@ services:
     depends_on:
       - db
   db:
-    container_name: db
+    container_name: flightwatch-db
     image: postgres:12
     environment:
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
