--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,12 @@ services:
     build: .
     environment:
       DATABASE_URL: $DATABASE_URL
+      PORT: $PORT
+      SKYSCANNER_API_KEY: $SKYSCANNER_API_KEY
+      TWILIO_ACC_SID: $TWILIO_ACC_SID
+      TWILIO_AUTH_TOKEN: $TWILIO_AUTH_TOKEN
+      TWILIO_PHONE_NUMBER: $TWILIO_PHONE_NUMBER
+      CUTTLY_API_KEY: $CUTTLY_API_KEY	
     ports:
       - "8081:3000"
     depends_on:
