--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       TWILIO_PHONE_NUMBER: $TWILIO_PHONE_NUMBER
       CUTTLY_API_KEY: $CUTTLY_API_KEY
     ports:
-      - "8081:3000"
+      - "8081:$PORT"
     depends_on:
       - db
   db:
