--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: flightwatch-api
     build: .
     environment:
-      DATABASE_URL: $DATABASE_URL
+      DB_URL: $DB_URL
       PORT: $PORT
       SKYSCANNER_API_KEY: $SKYSCANNER_API_KEY
       TWILIO_ACC_SID: $TWILIO_ACC_SID
